<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_all_products"
            android:icon="@drawable/all_products"
            android:title="@string/nav_allproducts" />
        <item
            android:id="@+id/nav_new_arrivals"
            android:icon="@drawable/new_arrival"
            android:title="New Arrivla" />
        <item
            android:id="@+id/nav_flash_deals"
            android:icon="@drawable/flash_deals"
            android:title="@string/flash_deals" />
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/discount"
            android:title="@string/discount" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="Wish List" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/login"
                android:title="Sign in" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile1"
                android:title="Profile" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/logout"
                android:title="Sign out" />
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/language_string"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
