<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQL.Address.Create_Address_Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!--<ProgressBar-->
        <!--android:id="@+id/prg_bar_create_adr"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:progress="80"-->
        <!--android:layout_centerInParent="true"-->
        <!--style="?android:progressBarStyleHorizontal"-->
        <!--android:progressDrawable="@drawable/progress_bar_circle"-->
        <!--/>-->
        <LinearLayout
            android:id="@+id/linear_progress_create_adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loading..."
                android:textSize="20dp"
                android:textStyle="bold"/>
            <ProgressBar  android:id="@+id/prg_bar_create_adr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:progress="80"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress_bar_circle"
                style="?android:progressBarStyleLarge" />

        </LinearLayout>
    <ScrollView
        android:id="@+id/scroll_create_adr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/personuppgifter_create_adr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_first_name_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_firstname"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_last_name_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_lastname"
                    android:imeActionId="6"
                    android:maxLines="1"
                    android:singleLine="true"
                     />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_address_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_address"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_address2_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_address2"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_city_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promt_city"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_state_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textSize="18dp"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/spi_state_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/state"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_postcode_create_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/promt_postcode"
                    android:inputType="numberSigned"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_create_adr"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
</LinearLayout>